WIP storage provisions UI
