# packages/api/src/server/dto/storage-provision.dto.ts
@@ -1,7 +1,6 @@
 import { createZodDto } from '@anatine/zod-nestjs'
+import { StorageProvisionTypeZodEnum } from '@stellariscloud/types'
 import { z } from 'zod'
-
-import { StorageProvisionType } from '../constants/server.constants'
 
 export const storageProvisionSchema = z.object({
   id: z.string(),
@@ -10,7 +9,7 @@ export const storageProvisionSchema = z.object({
   region: z.string(),
   accessKeyId: z.string(),
   prefix: z.string().optional(),
-  provisionTypes: z.array(z.nativeEnum(StorageProvisionType)),
+  provisionTypes: z.array(StorageProvisionTypeZodEnum).min(1),
   label: z.string().max(32),
   description: z.string().max(128),
 })
